widget alignments fixed

--- a/index.css
+++ b/index.css
@@ -312,6 +312,8 @@ border:1px solid black;
 border-radius: 25px
 }
 
-
+.wrapper {
+    display: flex;
+  }
 
 
